--- a/config.json
+++ b/config.json
@@ -1,4 +1,3 @@
 {
-  "token": "ODQ4MTY2NjM5MzY3MDk0MzAy.YLIqvA.zXdB_JXYkokkSdChZo2IwWMNKdA",
-  "owner": "725573213622632468"
+  "token": "your-token"
 }
