--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-  "token": "your-token"
+  "token": "ODQ4MTY2NjM5MzY3MDk0MzAy.YLIqvA.T5KEm1xTFlGycQ8ZtpSE8XeuMAw",
+  "owner": "725573213622632468"
 }
