--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "canvas": "^2.8.0",
     "discord-image-generation": "^1.4.9",
+    "dotenv": "^10.0.0",
     "enmap": "5.8.5",
     "fs": "^0.0.1-security",
     "got": "^9.6.0",
@@ -21,7 +22,7 @@
     "watch": "nodemon index.js"
   },
   "name": "discord-bot-tp",
-  "version": "2.5.8",
+  "version": "2.6.1",
   "description": "Discord bot made with D.js",
   "main": "index.js",
   "repository": {
