--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord-image-generation": "^1.4.9",
     "dotenv": "^10.0.0",
     "enmap": "5.8.5",
+    "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "got": "^9.6.0",
     "ms": "^2.1.3",
@@ -19,6 +20,9 @@
   },
   "scripts": {
     "start": "node index.js",
+    "start--pm2": "pm2 start index.js",
+    "stop--pm2": "pm2 stop index.js",
+    "restart--pm2": "pm2 restart index.js",
     "watch": "nodemon index.js"
   },
   "name": "discord-bot-tp",
