--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "discord.js": "12.5.3"
   },
   "dependencies": {
-    "afk-cord": "^1.0.2",
     "discord-image-generation": "^1.4.9",
     "dotenv": "^10.0.0",
     "enmap": "5.8.5",
@@ -12,7 +11,8 @@
     "fs": "^0.0.1-security",
     "got": "^9.6.0",
     "ms": "^2.1.3",
-    "pm2": "^5.1.0"
+    "pm2": "^5.1.0",
+    "quick.db": "^7.1.3"
   },
   "engines": {
     "node": ">=16.3.0"
