--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "got": "^9.6.0",
     "ms": "^2.1.3",
     "pm2": "^5.1.0",
-    "quick.db": "^7.1.3"
+    "quick.db": "^7.1.3",
+    "request": "^2.88.2"
   },
   "engines": {
     "node": ">=16.3.0"
