--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "got": "^9.6.0",
+    "moment": "^2.29.1",
     "ms": "^2.1.3",
     "pm2": "^5.1.0",
     "quick.db": "^7.1.3",
