--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "devDependencies": {
-    "discord-giveaways": "^4.5.1",
     "discord.js": "12.5.3"
   },
   "dependencies": {
     "discord-image-generation": "^1.4.9",
+    "discord-tictactoe": "^2.1.0",
     "dotenv": "^10.0.0",
     "enmap": "5.8.5",
     "express": "^4.17.1",
@@ -17,7 +17,7 @@
     "request": "^2.88.2"
   },
   "engines": {
-    "node": ">=16.3.0"
+    "node": ">=14.17.1"
   },
   "scripts": {
     "start": "node index.js",
