--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "discord.js": "12.5.3"
   },
   "dependencies": {
+    "discord-bj": "^2.0.7",
     "discord-image-generation": "^1.4.9",
     "discord-tictactoe": "^2.1.0",
     "dotenv": "^10.0.0",
@@ -14,7 +15,8 @@
     "ms": "^2.1.3",
     "pm2": "^5.1.0",
     "quick.db": "^7.1.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "shuffle-array": "^1.0.1"
   },
   "engines": {
     "node": ">=14.17.1"
