--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "devDependencies": {
     "discord.js": "12.5.3",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "2.3.1"
+    "eslint": "^7.29.0"
   },
   "dependencies": {
     "discord-bj": "^2.0.7",
