--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord-bj": "^2.0.7",
     "discord-image-generation": "^1.4.9",
+    "discord-minigames": "^1.2.2",
     "discord-tictactoe": "^2.1.0",
     "dotenv": "^10.0.0",
     "enmap": "5.8.5",
