--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
-    "discord.js": "12.5.3",
-    "eslint": "^7.29.0"
+    "discord.js": "12.5.3"
   },
   "dependencies": {
     "discord-bj": "^2.0.7",
@@ -15,7 +14,6 @@
     "got": "^9.6.0",
     "moment": "^2.29.1",
     "ms": "^2.1.3",
-    "opentdb-api": "^1.0.0",
     "pm2": "^5.1.0",
     "quick.db": "^7.1.3",
     "request": "^2.88.2",
