--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "discord-tictactoe": "^2.1.0",
     "dotenv": "^10.0.0",
     "enmap": "5.8.5",
+    "eslint": "^7.29.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "got": "^9.6.0",
