--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "devDependencies": {
-    "discord.js": "12.5.3"
-  },
   "dependencies": {
     "discord-bj": "^2.0.7",
     "discord-image-generation": "^1.4.9",
@@ -18,7 +15,8 @@
     "pm2": "^5.1.0",
     "quick.db": "^7.1.3",
     "request": "^2.88.2",
-    "shuffle-array": "^1.0.1"
+    "shuffle-array": "^1.0.1",
+    "discord.js": "12.5.3"
   },
   "engines": {
     "node": ">=14.17.1"
